--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       </h1>
       <h4>COLOR GAME</h4>
     </div>
-    <div>
+    <div id="hm">
       <button id="newcolors">New game</button>
     </div>
-    <div>
+    <div id="hii">
       <button id="easy">Easy <button id="hard">Hard</button></button>
     </div>
     <div id="boxes">
@@ -31,6 +31,7 @@
       <div id="b5"><img src="" alt="" /></div>
       <div id="b6"><img src="" alt="" /></div>
     </div>
+
     <h1 id="texting">TRY AGAIN!</h1>
     <script src="script.js"></script>
   </body>
